// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad group 1`] = `
{
  "regions": [
    ,
    {
      "id": {
        "key": "yup:string.uuid",
        "options": {
          "path": "regions[1].id",
        },
      },
    },
  ],
}
`;

exports[`should be invalid for bad link 1`] = `
{
  "link": {
    "key": "yup:string.url",
    "options": {
      "path": "link",
    },
  },
}
`;

exports[`should be invalid for bad placement 1`] = `
{
  "placement": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "mobileRegionDescription, mobileSectionDescription, mobileSectionMedia, mobileSectionRow",
    },
  },
}
`;

exports[`should be invalid for bad region 1`] = `
{
  "regions": [
    ,
    {
      "id": {
        "key": "yup:string.uuid",
        "options": {
          "path": "regions[1].id",
        },
      },
    },
  ],
}
`;

exports[`should be invalid for bad slug 1 1`] = `
{
  "slug": "yup:string.slug",
}
`;

exports[`should be invalid for bad slug 2 1`] = `
{
  "slug": "yup:string.slug",
}
`;

exports[`should be invalid for bad uuid 1`] = `
{
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`should be invalid for casting priority 1`] = `
{
  "priority": {
    "key": "yup:mixed.notType",
    "options": {
      "type": "number",
    },
  },
}
`;

exports[`should be invalid for empty name 1`] = `
{
  "name": "yup:mixed.required",
}
`;

exports[`should be invalid for empty source 1`] = `
{
  "source": {
    "url": "yup:mixed.required",
  },
}
`;

exports[`should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;

exports[`should be invalid for http link 1`] = `
{
  "link": "yup:string.https",
}
`;

exports[`should be invalid for source with extra fields 1`] = `
{
  "source": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "source",
    },
  },
}
`;
